# cargo-folderinfo

./: Cargo.toml  LICENSE  README.MD
src/: main.rs
