[package]
name = "cargo-folderinfo"
version = "0.2.0"
authors = ["adria0 <adria@codecontext.io>"]
edition = "2018"
description = "Dump all projects in the current folder"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.6"

[dependencies.itertools]
version = "0.9.0"

[dependencies.structopt]
version = "0.3.11"
